--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "remark-parse-frontmatter": "^1.0.0",
     "shiki": "^1.0.0",
     "tailwindcss": "^3.4.0",
+    "yaml": "^2.8.2",
     "zustand": "^4.4.0"
   },
   "devDependencies": {
